--- a/styles/main.css
+++ b/styles/main.css
@@ -3,6 +3,11 @@ body {
     font-family: "Source Sans Pro";
     scroll-snap-type: y mandatory;
 }
+.big{
+    text-align: center;
+    font-size: 2.5em;
+    font-weight: 600;
+}
 .bg {
     width: 100%;
     position: fixed;
