--- a/nikolai/nikolai styles/nikolai.css
+++ b/nikolai/nikolai styles/nikolai.css
@@ -1,20 +1,12 @@
-* {
-    box-sizing: border-box;
-}
-.column {
-    float: left;
-    width: 20%;
-    padding: 10px;
-}
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
 body{
     background-color: #888;
 }
 p{
     font-size: 1.5em;
     font-weight: 400;
+}
+.row {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    width: 40%;
 }
