--- a/contact/contact.css
+++ b/contact/contact.css
@@ -1,15 +1,30 @@
-table, th, td {
-    border: 20px solid black;
-    border-radius:1px;
-    font-size:20px;
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap');
+*{
+     font-family: "Source Sans Pro";
+    font-weight: 600;
+}
+body{
+    background-color: #505251;
 }
 #gender{
 max-width: 200px;
+text-align: center;
 }
 #play{
 max-width: 400px;
-
+text-align: center;
 }
-header ul {
+
+body{
+    text-align: center;
+    justify-content: center;
+}
+.flex {
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.flex input{
+    text-align: center;
+    align-items: center;
 }
