--- a/dempsy/demsy.css
+++ b/dempsy/demsy.css
@@ -1,10 +1,29 @@
 #life{
     text-align: center;
 }
+h1{
+text-shadow: 3px 5px 2px #474747;
+}
 body{
-    background-color: #505251;
+   background: #000000;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 ul li {
     font-size: 2em;
     font-weight: 500;
 }
+*{
+    color: white;
+}
+body{
+    background-color: #505251;
+}
+th{
+    text-align: left;
+}
+table{
+    border: solid white;
+}
+
