--- a/rick/rick styles/rick.css
+++ b/rick/rick styles/rick.css
@@ -1,6 +1,7 @@
 body{
-    background-color: #505251;
-    
+   background: #000000;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to left, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to left, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
 }
 p{
     font-size: 1.5em;
@@ -14,4 +15,25 @@ p{
 ul li{
     font-size: 2em;
     font-weight: 500;
+}
+*{
+    color: white;
+}
+body{
+    background-color: #505251;
+}
+th{
+    text-align: left;
+}
+table{
+    border: solid white;
+}
+.life{
+    text-align: center;
+}
+h1{
+text-shadow: 3px 5px 2px #474747;
+}
+th {
+    border: solid white;
 }
