--- a/takeo/takeo.css
+++ b/takeo/takeo.css
@@ -6,6 +6,13 @@ body{
 background: -webkit-linear-gradient(to left, #434343, #000000);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to left, #434343, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
+
+*{
+    color: white;
+}
+body{
+    background-color: #505251;
+}
 th{
     text-align: left;
 }
@@ -17,4 +24,7 @@ table{
 }
 h1{
 text-shadow: 3px 5px 2px #474747;
+}
+th {
+    border: solid white;
 }
